--- a/public/index.html
+++ b/public/index.html
@@ -16,24 +16,24 @@
     </div>
     <div class="section white">
         <div class="row container">
-            <h2 class="header">Contact Me</h2>
+            <h2 class="header">Send an email to whoever you want</h2>
             <form class="col s12">
                 <div class="input-field">
                     <i class="material-icons prefix">account_circle</i>
-                    <input id="icon_prefix" type="text" class="validate">
-                    <label for="icon_prefix">Full Name</label>
+                    <input id="name" type="text" class="validate">
+                    <label for="name">Your Name</label>
                 </div>
                 <div class="input-field">
                     <i class="material-icons prefix">email</i>
-                    <input id="icon_email" type="tel" class="validate">
-                    <label for="icon_email">Email</label>
+                    <input id="email" type="tel" class="validate">
+                    <label for="email">Email of the reciever</label>
                 </div>        
                 <div class="input-field">
                     <i class="material-icons prefix">message</i>                        
-                    <textarea id="textarea1" class="materialize-textarea"></textarea>
-                    <label for="textarea1">Message</label>
+                    <textarea id="message" class="materialize-textarea"></textarea>
+                    <label for="message">Message</label>
                 </div>
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <button id="submit" class="btn waves-effect waves-light">Submit
                     <i class="material-icons right">send</i>
                 </button>
             </form>
